# pixardis-web

./: Cargo.toml  LICENSE  README.md  build-web.bat  build-web.sh
compiler/: Cargo.toml
compiler/examples/: array_test.ps  bounce.pad  bounce.ps  fancy_clock.ps  fibonacci.ps  life.ps  pong.ps  race.ps  race64.ps  rainbow.pad  rainbow.ps  simple_test.pad  simple_test.ps  snake.pad  snake.ps  test.pad  test.ps
compiler/src/: main.rs
compiler/src/analysis/: mod.rs  semantic.rs  symbol.rs  visitor.rs
compiler/src/codegen/: generator.rs  mod.rs  optimiser.rs  visitor.rs
compiler/src/common/: logger.rs  mod.rs  status.rs
compiler/src/lexer/: lexer.rs  token.rs
compiler/src/parser/: ast.rs  parser.rs
frontend/: index.html
frontend/css/: styles.css
frontend/js/: editor.js  errors.js  main.js  ui.js  vm.js
frontend/pkg/: web.d.ts  web.js  web_bg.wasm  web_bg.wasm.d.ts
shared/: Cargo.toml
shared/src/: io.rs  lib.rs  pixardis.rs
vm/: Cargo.toml
vm/src/: main.rs
vm/src/machine/: architecture.rs  executor.rs  mod.rs
vm/src/pixardis/: mod.rs  pixardis.rs
web/: Cargo.toml
web/src/: lib.rs
