[workspace]
members = ["shared", "compiler", "vm", "web"]
resolver = "2"

# Shared dependencies across all workspace members
[workspace.dependencies]
clap = { version = "4.3.16", features = ["derive"] }
regex = "1.9.1"
fastrand = "2.3.0"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
macroquad = "0.4.1"
instant = { version = "0.1", features = ["wasm-bindgen", "now"] }

[workspace.dependencies.web-sys]
version = "0.3"
features = ["console"]