[package]
name = "web"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
shared = { path = "../shared" }
wasm-bindgen.workspace = true
regex.workspace = true
fastrand.workspace = true
getrandom.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"

[dependencies.web-sys]
workspace = true